[Sync] Fix an encoding issue that caused sync-internals to crash.

Some of the ids comming from payments needed to be converted before
they could be displayed.

This should only affect the sync internals page, no feature code.

Bug: 879556
Change-Id: I423580564574ea5f883044d4a4e08bf0e8c9b1e7
Reviewed-on: https://chromium-review.googlesource.com/1205192
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: Jan Krcal <jkrcal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589279}
Former-commit-id: b18743347f2fa3a84e29c119c6a8cd1e071de8aa